@@ -170,13 +170,8 @@ class Groups_Post_Access {
 			$user_id = get_current_user_id();
 
 			// this only applies to logged in users
-			if ( $user_id ) {
-				// if administrators can override access, don't filter
-				if ( get_option( GROUPS_ADMINISTRATOR_ACCESS_OVERRIDE, GROUPS_ADMINISTRATOR_ACCESS_OVERRIDE_DEFAULT ) ) {
-					if ( user_can( $user_id, 'administrator' ) ) {
-						return $where;
-					}
-				}
+			if ( _groups_admin_override() ) {
+				return $where;
 			}
 
 			// 1. Get all the groups that the user belongs to, including those that are inherited:
